[gd_scene load_steps=6 format=3 uid="uid://c2sp2pfpjhyid"]

[ext_resource type="Script" uid="uid://c0a1j6hkx7dq2" path="res://Interfaces/story_intro.gd" id="1_story"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_textbox"]
bg_color = Color(0.05, 0.05, 0.1, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.7, 0.3, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_fade_in"]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StoryImage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fade_out"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StoryImage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_story"]
_data = {
&"fade_in": SubResource("Animation_fade_in"),
&"fade_out": SubResource("Animation_fade_out")
}

[node name="StoryIntro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_story")
next_scene = "res://Scenes/Levels/level1/level1.tscn"
story_pages = Array[Dictionary]([{
"image": "res://Assets/fondos/story1.png",
"text": "Kala, un pueblo acunado por el fuego cerca del ecuador, producto de ser el destino preferido para los piromaniacos, tenÃ­a en las llamas su himno eterno. Sus noches, teÃ±idas de humo y reflejos anaranjados, habÃ­an visto arder templos, mercados y sueÃ±os. En esa tierra devorada por el calor, solo los bomberos, sacerdotes de las cenizas, podÃ­an negociar con el incendio.. Y entre ellos, JosuÃ©, de origen campesino, cumplÃ­a su deber civil sin mirar atrÃ¡s, forjado en el fuego que todo lo consume."
}, {
"image": "res://Assets/fondos/story2.png",
"text": "Â¿Puede el hombre culparse por perder lo que ama, cuando lo hace cumpliendo su deber? Â¿Puede culparse por ser desconocido en su propio hogar, por mirar la ciudad con mÃ¡s ternura que a sus hijos? Navidades pasaban sin su sombra, cumpleaÃ±os sin su voz. Una madrugada, el fuego decidiÃ³ visitarlo con rostro propio. Una fuga, una chispa, una rÃ¡faga bastaron. El espacio que alguna vez considerÃ³ su hogar, el aire aÃºn olÃ­a a su vida, porque el espacio donde dormÃ­a su humanidad, era ceniza, la lejanÃ­a rural del hogar habÃ­a evitado cualquier reporte y atenciÃ³n suya mientras no perdonÃ³ alma alguna."
}, {
"image": "res://Assets/fondos/story3.png",
"text": "Entre los restos, solo un alma esperÃ³, Osiris, un gato que algun dia solo conocio la calle, fue durante dÃ­as su propio refugio en su propio hogar, ahora, era el Ãºnico refugio que en realidad le quedaba  A pesar de los homenajes y las promesas, JosuÃ©, a sus 40 aÃ±os, habÃ­a perdido su hogar y con Ã©l, un pedazo de su alma. Por mÃ¡s que amara al animal, este no podrÃ­a llenar el vacÃ­o de sus pÃ©rdidas, ni sustituir el recuerdo de lo que, para siempre, se habÃ­a quedado atrÃ¡s."
}])

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="StoryImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="BottomPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_textbox")

[node name="MarginContainer" type="MarginContainer" parent="BottomPanel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="StoryText" type="RichTextLabel" parent="BottomPanel/MarginContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "Texto de la historia..."
fit_content = true
scroll_active = false

[node name="ContinueHint" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -220.0
offset_right = -50.0
offset_bottom = -190.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 0.7)
theme_override_font_sizes/font_size = 16
text = "Presiona cualquier tecla para continuar..."
horizontal_alignment = 2

[node name="PageIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 0.8)
theme_override_font_sizes/font_size = 18
text = "1/3"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_story")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
